syntax = "proto3";

package chremoas.roles;

message NilMessage {}
